agregando archivo de estilos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
                         </ul>
                     </div>
-                    <!--Company3-->
+                    <!--TODO:Company3-->
                     <div>
                         <h4>Manager <span>Roga&Compta New</span></h4>
                         <p>March 2013 - Febrary 2015  <b>l</b> Country</p>
@@ -70,6 +70,7 @@
                     <h3>Education</h3>
                     <h4>Instituto Tecnológico de Toluca</h4>
                     <p><b>Ingeniero Electrónico</b></p>
+                    <p>Decembre 2021</p>
                 </div>
            </div>
 
@@ -97,7 +98,7 @@
                     <li><span>NodeJS</span></li>
                 </ul>
                </div>
-               <!--Soft Skills-->
+               <!--TODO:Soft Skills-->
                <div>
                 <h3>Soft Skills</h3>
                 <ul>
