--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CV José Ricardo</title>
+        <link rel="stylesheet" href="css/styles.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">    
+
     </head>
 
     <body>
        <!--Main Container-->
-       <div>
+       <div id="main">
            <!--Main Content section-->
            <div>
                <!--About Me Section-->
@@ -75,7 +80,7 @@
            </div>
 
            <!--Sidebar Section-->
-           <aside>
+           <aside class="sidebar">
                <img src="/img/photo.png" alt="Foto de José Ricardo"/>
                <!--Contact Section--> 
                <div>
