Agregando estilos a la SideBar

--- a/index.html
+++ b/index.html
@@ -83,34 +83,38 @@
            <aside class="sidebar">
                <img src="/img/photo.png" alt="Foto de José Ricardo"/>
                <!--Contact Section--> 
-               <div>
-                   <h3>Contact</h3>
-                   <b>C:</b>
-                   <a href="tel:+52 722 111 2233">7221112233</a>
-                   <b>M:</b>
-                   <a href="mailto:jricardocam@gmail.com">josericardo@gmail.com</a>
-               </div>
+               <div class="contactSection">
+                 <h3 class="sbTitle">Contact</h3>
+                    <div>
+                        <b class="contactSectionType">C:</b>
+                        <a class="contactSectionLink" href="tel:+52 722 111 2233">7221112233</a>
+                    </div>
+                    <div>
+                        <b class="contactSectionType">M:</b>
+                        <a class="contactSectionLink" href="mailto:jricardocam@gmail.com">josericardo@gmail.com</a>
+                    </div>
+                </div>
                <!--Technical Skills-->
-               <div>
-                <h3>Technical Skills</h3>
-                <ul>
-                    <li><span>HTML5</span></li>
-                    <li><span>CSS3</span></li>
-                    <li><span>GIT</span></li>
-                    <li><span>WebPack</span></li>
-                    <li><span>JavaScript</span></li>
-                    <li><span>React</span></li>
-                    <li><span>NodeJS</span></li>
+               <div class="contactSection">
+                <h3 class="sbTitle">Technical Skills</h3>
+                <ul class="tsList">
+                    <li class="tsItem"><span class="tsText">HTML5</span></li>
+                    <li class="tsItem"><span class="tsText">CSS3</span></li>
+                    <li class="tsItem"><span class="tsText">GIT</span></li>
+                    <li class="tsItem"><span class="tsText">WebPack</span></li>
+                    <li class="tsItem"><span class="tsText">JavaScript</span></li>
+                    <li class="tsItem"><span class="tsText">React</span></li>
+                    <li class="tsItem"><span class="tsText">NodeJS</span></li>
                 </ul>
                </div>
                <!--TODO:Soft Skills-->
-               <div>
-                <h3>Soft Skills</h3>
-                <ul>
-                    <li><span>Scrum</span></li>
-                    <li><span>Agile</span></li>
-                    <li><span>GTD</span></li>
-                    <li><span>TeamWork</span></li>
+               <div class="contactSection">
+                <h3 class="sbTitle">Soft Skills</h3>
+                <ul class="tsList">
+                    <li class="tsItem"><span class="tsText">Scrum</span></li>
+                    <li class="tsItem"><span class="tsText">Agile</span></li>
+                    <li class="tsItem"><span class="tsText">GTD</span></li>
+                    <li class="tsItem"><span class="tsText">TeamWork</span></li>
                 </ul>
                </div>
            </aside>
