--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
        <!--Main Container-->
        <div id="main">
            <!--Main Content section-->
-           <div>
+           <div class="mainContainer">
                <!--About Me Section-->
-                <div>
-                    <h2>FrontEnd Developer</h2>
-                    <h1>José Ricardo Camacho Camacho</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                <div class="aboutSec">
+                    <h2 class="aboutTitle">FrontEnd Developer</h2>
+                    <h1 class="aboutName">José Ricardo Camacho Camacho</h1>
+                    <p class="aboutDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                        olores atque aspernatur at quae aperiam consequuntur nobis debitis
                        eligendi nulla animi pariatur asperiores, facilis magni harum praesentium, 
                        dolorum quibusdam facere magnam.
@@ -29,19 +29,19 @@
                 </div>
                <!--My projects section-->
                 <div>
-                    <h3>Projects</h3>
-                    <ul>
-                        <li><a href="#">Proyecto número uno .........<b>[</b>HTML CSS<b>]</b></a></li>
-                        <li><a href="#">Proyecto número dos..........<b>[</b>JS<b>]</b></a></a></li>
-                        <li><a href="#">Proyecto número tres.........<b>[</b>NODEJS<b>]</b></a></a></li>
+                    <h3 class="proyectTit">Projects</h3>
+                    <ul class="proyectList">
+                        <li class="proyectItem"><a class="proyectAn" href="#">Proyecto número uno .........<b class="proyectBra">[</b>HTML CSS<b >]</b></a></li>
+                        <li class="proyectItem"><a class="proyectAn" href="#">Proyecto número dos..........<b class="proyectBra">[</b>JS<b  class="proyectBra">]</b></a></a></li>
+                        <li class="proyectItem"><a class="proyectAn" href="#">Proyecto número tres.........<b class="proyectBra">[</b>NODEJS<b  class="proyectBra">]</b></a></a></li>
                     </ul>
                 </div>
                <!--My Work exprerince-->
-                <div>
-                    <h3>Work Exprerince</h3>
+                <div class="expContainer">
+                    <h3 class="expTitle">Work Exprerince</h3>
                     <!--Company1-->
-                    <div>
-                        <h4>FrontEnd Developer <span>Freelance</span></h4>
+                    <div class="companyCont">
+                        <h4 class="compTitle">FrontEnd Developer <span>Freelance</span></h4>
                         <p>September 2018 up to now <b>l</b> Country</p>
                         <ul>
                             <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
@@ -50,8 +50,8 @@
                         </ul>
                     </div>
                     <!--Company2-->
-                    <div>
-                        <h4>Manager <span>Roga&Compta New</span></h4>
+                    <div class="companyCont">
+                        <h4 class="compTitle">Manager <span>Roga&Compta New</span></h4>
                         <p>March 2015 - September 2018  <b>l</b> Country</p>
                         <ul>
                             <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
@@ -59,9 +59,9 @@
                             <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
                         </ul>
                     </div>
-                    <!--TODO:Company3-->
-                    <div>
-                        <h4>Manager <span>Roga&Compta New</span></h4>
+                    <!--Company3-->
+                    <div class="companyCont">
+                        <h4 class="compTitle">Manager <span>Roga&Compta New</span></h4>
                         <p>March 2013 - Febrary 2015  <b>l</b> Country</p>
                         <ul>
                             <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
