--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </p>
                 </div>
                <!--My projects section-->
-                <div>
+                <div class="proyectSec">
                     <h3 class="proyectTit">Projects</h3>
                     <ul class="proyectList">
                         <li class="proyectItem"><a class="proyectAn" href="#">Proyecto número uno .........<b class="proyectBra">[</b>HTML CSS<b >]</b></a></li>
@@ -41,41 +41,41 @@
                     <h3 class="expTitle">Work Exprerince</h3>
                     <!--Company1-->
                     <div class="companyCont">
-                        <h4 class="compTitle">FrontEnd Developer <span>Freelance</span></h4>
-                        <p>September 2018 up to now <b>l</b> Country</p>
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                        <h4 class="compTitle">FrontEnd Developer <span class="comType">Freelance</span></h4>
+                        <p class="compPeriod">September 2018 up to now <b>l</b> Country</p>
+                        <ul class="compList">
+                            <li class="compItem">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                            <li class="compItem">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                            <li class="compItem">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
                         </ul>
                     </div>
                     <!--Company2-->
                     <div class="companyCont">
-                        <h4 class="compTitle">Manager <span>Roga&Compta New</span></h4>
-                        <p>March 2015 - September 2018  <b>l</b> Country</p>
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                        <h4 class="compTitle">Manager <span class="comType">Roga&Compta New</span></h4>
+                        <p class="compPeriod">March 2015 - September 2018  <b>l</b> Country</p>
+                        <ul class="compList">
+                            <li class="compItem">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                            <li class="compItem">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                            <li class="compItem">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
                         </ul>
                     </div>
                     <!--Company3-->
                     <div class="companyCont">
-                        <h4 class="compTitle">Manager <span>Roga&Compta New</span></h4>
-                        <p>March 2013 - Febrary 2015  <b>l</b> Country</p>
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                        <h4 class="compTitle">Manager <span class="comType">Roga&Compta New</span></h4>
+                        <p class="compPeriod">March 2013 - Febrary 2015  <b>l</b> Country</p>
+                        <ul class="compList">
+                            <li class="compItem">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                            <li class="compItem">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                            <li class="compItem">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
                         </ul>
                     </div>
                 </div>
                <!-- TODO: Education-->
-                <div>
-                    <h3>Education</h3>
-                    <h4>Instituto Tecnológico de Toluca</h4>
-                    <p><b>Ingeniero Electrónico</b></p>
-                    <p>Decembre 2021</p>
+                <div class="eduContainer">
+                    <h3 class="eduTitle">Education</h3>
+                    <h4 class="eduSchool">Instituto Tecnológico de Toluca</h4>
+                    <p class="eduCarrer"><b>Ingeniero Electrónico</b></p>
+                    <p class="eduPeriod">Decembre 2021</p>
                 </div>
            </div>
 
