--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
            <!--Sidebar Section-->
            <aside class="sidebar">
-               <img src="/img/photo.png" alt="Foto de José Ricardo"/>
+               <img src="img/photo.png" alt="Foto de José Ricardo"/>
                <!--Contact Section--> 
                <div class="contactSection">
                  <h3 class="sbTitle">Contact</h3>
